--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
       </div>
       <div class="footer_container">
         <p>Copyright © 2009 - 2020 - All Rights Reserved - Domain Name</p>
-        <p>Template by Yusuf Tosin Azeez</p>
+        <p>Template by Yakub Akorede Ojoawo</p>
       </div>
     </footer>
   </body>
