--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           <div class="section4_images">
             <div class="section4_imagecontainer">
               <div class="overlay_image">
-                <a href=""><img src="/img/refinary.jpg" alt="" /></a>
+                <a href=""><img src="img/refinary.jpg" alt="" /></a>
                 <i class="overlay1 fa-solid fa-link"></i>
               </div>
               <div class="section4_profile_container">
@@ -348,7 +348,7 @@
 
             <div class="section4_imagecontainer2">
               <div class="overlay_image">
-                <a href=""><img src="/img/tractor.jpg" alt="" /></a>
+                <a href=""><img src="img/tractor.jpg" alt="" /></a>
                 <i class="overlay1 fa-solid fa-link"></i>
               </div>
               <div class="section4_profile_container">
@@ -369,7 +369,7 @@
 
             <div class="section4_imagecontainer">
               <div class="overlay_image">
-                <a href=""><img src="/img/flower.jpg" alt="" /></a>
+                <a href=""><img src="img/flower.jpg" alt="" /></a>
                 <i class="overlay1 fa-solid fa-link"></i>
               </div>
               <div class="section4_profile_container">
